--- a/page2.html
+++ b/page2.html
@@ -9,6 +9,8 @@
     
 	<link rel="stylesheet" type="text/css" href="style.css">
 
+	<link rel="preload" href="style.css" as="style">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 
     <title>La chouette agence | Contact</title>
 
@@ -153,6 +155,10 @@
 <!-- Footer - bloc-8 END -->
 
 <!-- Principal conteneur END -->
-
+<script src="./js/jquery-2.1.0.js" ></script>
+<script src="./js/bootstrap.js" defer></script>
+<script src="./js/blocs.js" ></script>
+<script src="./js/jquery.touchSwipe.js" defer></script>
+<script src="./js/gmaps.js" ></script>
 </body>
 </html>
