--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="keywords" content="La chouette agence, agence web design, création site web, web design, Lyon, illustrations">
     <meta name="description" content="La Chouette agence est une entreprise de web design basée à lyon qui aide ses clients à réaliser ses futurs projets ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
- 
+ 	
+	<link rel="icon" type="image/png" sizes="16x16"  href="./favicon.jpg">
 	<link rel="preload" href="style.css" as="style">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
