--- a/page2.html
+++ b/page2.html
@@ -11,6 +11,8 @@
 
 	<link rel="preload" href="style.css" as="style">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
     <title>La chouette agence | Contact</title>
 
