--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" alt="Logo de la chouette agence" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Un projet de design web à réliser? La chouette agence est là pour vous y aider!
+					Un projet de design web à réaliser? La chouette agence est là pour vous y aider!
 				</h1>
 			</div>
 		</div>
