--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
  
 	<link rel="icon" type="image/png" sizes="16x16"  href="./favicon.jpg">
-	<link rel="preload" as="font">
 	<link rel="preload" href="style.css" as="style">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -64,7 +63,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" alt="Logo de la chouette agence" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Un projet de design web à réaliser? La chouette agence est là pour vous y aider!
+					Un projet de design web à réliser? La chouette agence est là pour vous y aider!
 				</h1>
 			</div>
 		</div>
@@ -235,23 +234,23 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" href="index.html"><span class="fa fa-twitter icon-md" title="logo de twitter"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="index.html"><span class="fa fa-facebook icon-md" title="logo de Facebook"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" title="logo de Dribbble"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
 								<a class="social" href="index.html">
-									<span class="fa fa-instagram icon-md"></span>
+									<span title="logo d'Instagram" class="fa fa-instagram icon-md" ></span>
 								</a>
 							</div>
 						</div>
@@ -272,7 +271,7 @@
 </footer>
 <!-- Footer - bloc-8 END -->
 
-</div>
+
 <!-- Principal conteneur END -->
 <script src="./js/jquery-2.1.0.js"></script>
 <script src="./js/bootstrap.js" defer></script>
