--- a/index.html
+++ b/index.html
@@ -234,23 +234,25 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-twitter icon-md" title="logo de twitter"></span></a>
+								<a class="social" href="index.html"><span class="fa fa-twitter icon-md" title="Twitter"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-facebook icon-md" title="logo de Facebook"></span></a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" title="logo de Dribbble"></span></a>
+								<a class="social" href="index.html"><span class="fa fa-facebook icon-md" title="Facebook"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
 								<a class="social" href="index.html">
-									<span title="logo d'Instagram" class="fa fa-instagram icon-md" ></span>
+									<span class="fa fa-dribbble icon-md" title="Dribbble"></span>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html">
+									<span title="Instagram" class="fa fa-instagram icon-md" ></span>
 								</a>
 							</div>
 						</div>
@@ -273,11 +275,11 @@
 
 
 <!-- Principal conteneur END -->
-<script src="./js/jquery-2.1.0.js"></script>
+<script src="./js/jquery-2.1.0.js" defer></script>
 <script src="./js/bootstrap.js" defer></script>
-<script src="./js/blocs.js"></script>
+<script src="./js/blocs.js" async></script>
 <script src="./js/jquery.touchSwipe.js" defer></script>
-<script src="./js/gmaps.js"></script>
+<script src="./js/gmaps.js" async></script>
 
 </body>
 </html>
