--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Contact La chouette agence, agence web design, création site web, web design, Lyon, illustrations">
-    <meta name="description" content="">
+    <meta name="description" content="La Chouette agence est une entreprise de web design basée à lyon qui aide ses clients à réaliser ses futurs projets ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -14,6 +14,13 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
+	<script src="./js/jquery-2.1.0.js" ></script>
+	<script src="./js/bootstrap.js" async></script>
+	<script src="./js/blocs.js" async></script>
+	<script src="./js/jquery.touchSwipe.js" async></script>
+	<script src="./js/gmaps.js" async></script>
+
+	
     <title>La chouette agence | Contact</title>
 
     
@@ -31,7 +38,7 @@
 		<div class="container bloc-sm">
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="" height="40" /></a>
+					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de la chouette agence" height="40" /></a>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
@@ -73,32 +80,31 @@
 			<div class="col-sm-6">
 				<form id="form_1">
 					<div class="form-group">
-						<label>
+						<label for="name">
 							Nom
 						</label>
 						<br>
 						<input id="name" type="text" placeholder="Entrez votre nom" class="form-control" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="email">
 							Adresse email
 						</label>
 						<br>
 						<input id="email" placeholder="Entrez une adresse mail valide" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
 						<br>
 						<input class="form-control" type="text" placeholder="Dites-nous tout !" required id="input_504" />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label>
-						<textarea id="message" placeholder="Ecrivez votre message" class="form-control" rows="4" cols="50"  required>
-						</textarea>
+						<textarea id="message" placeholder="Ecrivez votre message" class="form-control" rows="4" cols="50"  required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -131,22 +137,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md" title="Twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md" title="Facebook"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" title="Dribbble"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md" title="Instagram'"></span></a>
 						</div>
 					</div>
 				</div>
@@ -157,10 +163,6 @@
 <!-- Footer - bloc-8 END -->
 
 <!-- Principal conteneur END -->
-<script src="./js/jquery-2.1.0.js" ></script>
-<script src="./js/bootstrap.js" defer></script>
-<script src="./js/blocs.js" ></script>
-<script src="./js/jquery.touchSwipe.js" defer></script>
-<script src="./js/gmaps.js" ></script>
+
 </body>
 </html>
